--- a/index.html
+++ b/index.html
@@ -7,7 +7,6 @@
       <link rel="stylesheet" href="css/anime.css">
     <link href="http://fonts.googleapis.com/css?family=Yanone+Kaffeesatz:400,700|Lobster|Roboto:400,700italic,700,500italic" rel='stylesheet'>
     <link rel="stylesheet" href="css/main.css">
-
     <link rel="stylesheet" href="css/responsive.css">
     <meta name="viewport" content="width=device=-width. initial-scale=1.9">
      </head>
@@ -117,7 +116,10 @@
   <div class='tree'>
     <div class='treetop'></div>
   </div>
-  <div class='dirt'></div>
+  <div class='dirt'>
+      <div class='legend_left'></div>
+      <div class='legend_right'></div>
+       </div>
 </div>
 
 
@@ -166,7 +168,7 @@
 
         
       <footer>
-        <a href="http://facebook.com/marccook"><img src="img/facebook-wrap.png" alt="Facebook logo" class="social-icon"></a>
+        <a href="#"><span class="glyphicon glyphicon-envelope"></span></a>
       <p class='regs'>&copy; 2014 Sirealious Pendragon</p>
       </footer>
       </div>
