added some bugs issues to attack and future plans.

--- a/index.html
+++ b/index.html
@@ -8,15 +8,17 @@
     <link rel="stylesheet" href="css/responsive.css">
     <script type="text/javascript" src="js/jquery-1.12.1.js"></script>
     <script type="text/javascript" src="js/jquery-ui.min.js"></script>
-
+ <script type="text/javascript" src="draggable.js"></script>
 
     <script type="text/javascript">
         $(document).ready(function() {
             $(".draggable").draggable();
         });
+
+    
     </script>
 
-    <!--<script type="text/javascript" src="draggable.js"></script>-->
+   
 
 
 </head>
@@ -222,8 +224,8 @@ DRAGGABLE CONTENT
 
 
     <div>
-        <div class="mountain_move"></div>
-        <div class="snow_move"></div>
+        <div class="mountain_move" style="left: 629px; top: 157px;"></div>
+        <div class="snow_move" style="height: 2px; left: 679px; top: 155px;"></div>
     </div>
 
 
